syntax = "proto3";

package proto;

option go_package = "github.com/angel/go-api-sqlite/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

service FeatureService {
  rpc CreateFeature(CreateFeatureRequest) returns (Feature) {}
  rpc GetFeature(GetFeatureRequest) returns (Feature) {}
  rpc ListFeatures(ListFeaturesRequest) returns (ListFeaturesResponse) {}
  rpc UpdateFeature(UpdateFeatureRequest) returns (Feature) {}
  rpc DeleteFeature(DeleteFeatureRequest) returns (DeleteFeatureResponse) {}
}

message Feature {
  string id = 1;
  string name = 2;
  google.protobuf.Value value = 3;
  string resource_id = 4;
  bool active = 5;
  google.protobuf.Timestamp created_at = 6;
}

message CreateFeatureRequest {
  string name = 1;
  google.protobuf.Value value = 2;
  string resource_id = 3;
  bool active = 4;
}

message GetFeatureRequest {
  string id = 1;
}

message ListFeaturesRequest {
  string resource_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListFeaturesResponse {
  repeated Feature features = 1;
  string next_page_token = 2;
}

message UpdateFeatureRequest {
  string id = 1;
  string name = 2;
  google.protobuf.Value value = 3;
  string resource_id = 4;
  bool active = 5;
}

message DeleteFeatureRequest {
  string id = 1;
}

message DeleteFeatureResponse {
  bool success = 1;
}
